# Storyteller-V2

./: .dockerignore  .env.example  .env.production.example  .gitignore  .markdownlint.json  API_REFERENCE.md  CLAUDE.md  Dockerfile  MODEL_OPTIMIZATION_GUIDE.md  Makefile  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_PLAN.md  docker-compose.yml  ingest_style.bat  ingestion_app.py  pyproject.toml  pytest.ini  run_app.py  run_with_venv.bat  run_with_venv.ps1  setup_dev.bat  start_app.bat  start_backend.bat  start_dev.bat  start_ingestion_ui.bat  start_ui.bat  streamlit_app.py
.github/: pull_request_template.md
backend/: llm_client.py  main.py
data/: character_aliases.yml  companions.yaml  era_assignment.csv
docs/: 00_overview.md  01_repo_map.md  02_turn_lifecycle.md  03_state_and_persistence.md  04_agents_and_models.md  05_rag_and_ingestion.md  06_api_and_routes.md  07_known_issues_and_risks.md  08_alignment_checklist.md  09_call_graph.md  10_model_selection_and_timeline.md  11_architecture_and_gameplay_review.md  CONSOLIDATION_V2.20.md  CONTENT_SYSTEM.md  DOCUMENTATION_CURATION_PLAN.md  ERA_PACK_QUICK_REFERENCE.md  IMPLEMENTATION_PLAN.md  MIGRATION_FROM_ERA_PACKS.md  PACK_AUTHORING.md  PRODUCTION_READINESS_REVIEW.md  RUNBOOK.md  SETTING_PACK_QUICK_REFERENCE.md  architecture.md  deployment.md  dialogue_system_architecture.md  era_pack_generation_prompt.md  era_pack_schema_reference.md  era_pack_template.md  lore_pipeline_guide.md  player_ux_flow.md  ui_improvements_v2.9.md  user_guide.md
frontend/: Dockerfile  package-lock.json  package.json
(+472 files in other folders)
